@@ -6,7 +6,7 @@
  * @subpackage Maintenance
  */
 
-require_once( 'commandLine.inc' );
+require_once( dirname(__FILE__).'/../commandLine.inc' );
 require_once( 'languages.inc' );
 
 /**
